# psrdada-rs

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  cleanup.sh  flake.nix  plan.org
.github/workflows/: ci.yml
benches/: benchmark.rs
examples/: example.rs  read_transform_write.rs
psrdada-sys/: Cargo.toml  build.rs  wrapper.h
psrdada-sys/src/: lib.rs
src/: builder.rs  client.rs  dada_iter.rs  errors.rs  headers.rs  highlevel.rs  io.bak.rs  io.rs  iter.rs  lib.rs  logging.rs  prelude.rs  tests.rs  traits.rs  utils.rs
src/io/: mod.rs  read.rs  write.rs
