[package]
name = "psrdada"
version = "0.1.0"
edition = "2021"
rust-version = "1.57.0"
authors = [ "Kiran Shila <me@kiranshila.com>" ]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/GReX-Telescope/psrdada-rs"
description = "A rusty wrapper for the psrdada radio astronomy library"
homepage = "https://github.com/GReX-Telescope/psrdada-rs"
readme = "README.md"
keywords = ["astronomy", "protocol", "telescope"]
categories = ["encoding","parser-implementations"]

[dependencies]
psrdada-sys = {path = "./psrdada-sys"}
page_size = "0.4"
tracing = "0.1"
lending-iterator = "0.1"
nom = "7"

[dev-dependencies]
test-log = { version = "0.2", features = ["trace"] }
env_logger = "*"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

[features]
# Enables CUDA support
cuda = ["psrdada-sys/cuda"]

[workspace]
members = ["psrdada-sys"]
