[package]
name = "psrdada-sys"
version = "0.4.0"
edition = "2021"
links = "psrdada"
authors = [ "Kiran Shila <me@kiranshila.com>" ]
rust-version = "1.57.0"
license = "MIT OR Apache-2.0"
description = "Bindgen wrappers for psrdada"
readme = "../README.md"
homepage = "https://github.com/kiranshila/psrdada-rs"
repository = "https://github.com/kiranshila/psrdada-rs"
keywords = ["astronomy", "protocol", "telescope"]
categories = ["encoding","parser-implementations"]

[build-dependencies]
bindgen = "0.69"
pkg-config = "0.3"

[dev-dependencies]
page_size = "0.6"
